[package]
name = "jwt-auth-example"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "server"
path = "src/simple_server.rs"

[[bin]]
name = "client"
path = "src/simple_client.rs"

[dependencies]
# JWT 认证
jsonwebtoken = "9.0"

# HTTP 服务器和客户端
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
eyre = "0.6"

# 工具
hex = "0.4"