[package]
name = "new-block-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rpc-types-engine = { workspace = true }
alloy-primitives = { workspace = true }
alloy-eips = { workspace = true }
eyre = { workspace = true }
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"